WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134934
REGRESSION(WK2 iOS): Safari hangs when switching focus from a field using the Tab key
https://bugs.webkit.org/show_bug.cgi?id=134934
Summary
REGRESSION(WK2 iOS): Safari hangs when switching focus from a field using the...
Enrica Casucci
Reported
2014-07-15 11:58:48 PDT
Launch Mobile Safari and navigate to any page that has more than one input field. Connect a bluetooth keyboard. Focus on the first field. Press Tab on the hardware keyboard. Expected: The focus moves to the next field. Actual: Safari hangs. <
rdar://problem/17224638
>
Attachments
Patch
(2.07 KB, patch)
2014-07-15 12:06 PDT
,
Enrica Casucci
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-07-15 12:06:00 PDT
Created
attachment 234943
[details]
Patch
WebKit Commit Bot
Comment 2
2014-07-15 12:07:33 PDT
Attachment 234943
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1802: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 3
2014-07-15 13:52:44 PDT
Committed revision 171114.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug