REGRESSION(WK2 iOS): Safari hangs when switching focus from a field using the Tab key. https://bugs.webkit.org/show_bug.cgi?id=134934 <rdar://problem/17224638>

Reviewed by Tim Horton.

* UIProcess/ios/WKContentViewInteraction.mm:

Tab and back tab should be handled as special keys that have
a command associated. The command specifies for each key the relevant
action. This patch implements the commands property to create the association
between key and command and the relevant actions that will execute the same
code executed when the used taps on the < > buttons in the accessory bar.

(-[WKContentView keyCommands]):
(-[WKContentView _nextAccessoryTab:]):
(-[WKContentView _prevAccessoryTab:]):



Canonical link: https://commits.webkit.org/152872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171114 268f45cc-cd09-0410-ab3c-d52691b4dbfc